<resources>
    <string name="app_name">Gluck</string>
    <string name="action_settings">Settings</string>
    <string name="USERNAME">username</string>
    <string name="email">email</string>
    <string name="PASSWORD">Password</string>
    <string name="password">password</string>
    <string name="login">LOGIN</string>
    <string name="NewUser">New user? Register here</string>
    <string name="Signup">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="emails">Email Address</string>
    <string name="pass">Password</string>
    <string name="logo">TODO</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_location_permission">Location Permission</string>
    <string name="text_location_pernission">Allow Gluck to access location </string>
    <string name="ok">OK</string>
    <string name="welcome">Welcome</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Logout">logout</string>
    <string name="brand">brand</string>
    <string name="offer">offer</string>
    <string name="About">about</string>
    <string name="pass_reset">Reset Password</string>
    <string name="reset">reset</string>
    <string name="Reset_Password">Forgotten Password?</string>
</resources>
