<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nai"
    android:clipToPadding="true"
    android:fillViewport="true"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:scrollbarStyle="outsideOverlay"
    android:visibility="visible"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:visibility="visible">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/SignUpheading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="500dp"
            android:gravity="center"
            android:text="@string/Signup"
            android:textColor="#F7F4F4"
            android:textSize="50sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/firstnamereg"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:layout_marginTop="60dp"
            android:autofillHints="First Name"
            android:background="@drawable/rounded_corner"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="#212121"
            android:textColorHint="#636363"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SignUpheading"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/lastnamereg"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:layout_marginTop="50dp"
            android:autofillHints="Last Name"
            android:background="@drawable/rounded_corner"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="#212121"
            android:textColorHint="#636363"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstnamereg"
            tools:targetApi="o" />


        <EditText
            android:id="@+id/emailreg"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:layout_marginTop="50dp"
            android:autofillHints="@string/USERNAME"
            android:background="@drawable/rounded_corner"
            android:ems="10"
            android:hint="@string/emails"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="#212121"
            android:textColorHint="#636363"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lastnamereg"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/passwordreg"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:layout_marginTop="50dp"
            android:autofillHints="Password"
            android:background="@drawable/rounded_corner"
            android:ems="10"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="#212121"
            android:textColorHint="#636363"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailreg"
            tools:targetApi="o" />

        <Button
            android:id="@+id/btnactualreg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_corner"
            android:text="@string/Signup"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:onClick="SignUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordreg" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>