<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RestaurantDetailActivity">

    <ImageView
        android:id="@+id/ImageViewImage"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBrand" />

    <TextView
        android:id="@+id/textViewBrand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brand"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/textViewOffer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/offer"
        app:layout_constraintTop_toBottomOf="@+id/ImageViewImage"
        app:layout_constraintStart_toStartOf="@id/ImageViewImage"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/textViewOfferDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/offer"
        app:layout_constraintTop_toTopOf="@id/textViewOffer"
        app:layout_constraintStart_toEndOf="@id/textViewOffer"
        android:layout_marginStart="10dp" />

    <TextView
        android:id="@+id/textViewAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/About"
        app:layout_constraintTop_toBottomOf="@+id/textViewOffer"
        app:layout_constraintStart_toStartOf="@id/textViewOffer"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/textViewAboutDetail"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/About"
        app:layout_constraintStart_toEndOf="@+id/textViewAbout"
        app:layout_constraintTop_toTopOf="@id/textViewAbout"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp" />
</androidx.constraintlayout.widget.ConstraintLayout>