<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BarDetailActivity">

    <ImageView
        android:id="@+id/ImageViewBarImage"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:srcCompat="@drawable/nai"
        app:layout_constraintTop_toBottomOf="@+id/textViewBrand"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/textViewBarBrand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brand"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/textViewBarOffer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/offer"
        app:layout_constraintTop_toBottomOf="@+id/ImageViewBarImage"
        app:layout_constraintStart_toStartOf="@id/ImageViewBarImage"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/textViewBarOfferDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/offer"
        app:layout_constraintTop_toTopOf="@id/textViewBarOffer"
        app:layout_constraintStart_toEndOf="@id/textViewBarOffer"
        android:layout_marginStart="10dp" />

    <TextView
        android:id="@+id/textViewBarAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/About"
        app:layout_constraintTop_toBottomOf="@+id/textViewBarOffer"
        app:layout_constraintStart_toStartOf="@id/textViewBarOffer"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/textViewBarAboutDetail"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/About"
        app:layout_constraintStart_toEndOf="@+id/textViewBarAbout"
        app:layout_constraintTop_toTopOf="@id/textViewBarAbout"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp" />

</androidx.constraintlayout.widget.ConstraintLayout>